multiple changes
- excluded some unneeded dependencies
- added a Main wrapper for the application. Hopefully no more error
- add some configs to build fat jar for standalone executable